kubernetes/apps/dns/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns
  namespace: dns
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: dns
  template:
    metadata:
      labels:
        app: dns
    spec:
      serviceAccountName: dns-service-account
      containers:
        # Pi-hole
        - name: pi-hole
          image: pihole/pihole:2026.06.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "100Mi"
              cpu: "256m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          ports:
            - containerPort: 53
              protocol: TCP
              name: dns-tcp
            - containerPort: 53
              protocol: UDP
              name: dns-udp
            - containerPort: 80
              protocol: TCP
              name: http-ui
            - containerPort: 443
              protocol: TCP
              name: https-ui
          volumeMounts:
            - name: pihole-data
              mountPath: /etc/pihole

        # Unbound
        - name: unbound
          image: manosgrigorakis/unbound:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "384Mi"
              cpu: "500m"
          volumeMounts:
            - name: unbound-config-volume
              mountPath: /etc/unbound/unbound.conf
              subPath: unbound.conf
              readOnly: true
            - name: unbound-data
              mountPath: /var/lib/unbound/
      volumes:
        - name: pihole-data
          persistentVolumeClaim:
            claimName: pihole-pvc
        - name: unbound-config-volume
          configMap:
            name: unbound-config
        - name: unbound-data
          persistentVolumeClaim:
            claimName: unbound-pvc
