kubernetes/apps/dns/pihole-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-ui-service
  namespace: dns
spec:
  selector:
    app: dns
  ports:
    - name: pihole-ui-http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
