kubernetes/apps/dns/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-service
  namespace: dns
  annotations:
    metallb.io/loadBalancerIPs: 192.168.10.123
spec:
  selector:
    app: dns
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
  externalTrafficPolicy: Local
  type: LoadBalancer
